# Fluxa

./: .gitignore  Cargo.toml  README.md  TODO.md  biblio.md  competences.md
.github/workflows/: rust.yml
flux-core/: Cargo.toml
flux-core/src/: lib.rs
flux-dom/: Cargo.toml
flux-dom/src/: lib.rs
flux-dom/src/style/: appearance.rs  flex.rs  grid.rs  layout.rs  mod.rs  other.rs  table.rs  text.rs  unit.rs
flux-network/: Cargo.toml
flux-network/src/: client.rs  errors.rs  http_parser.rs  lib.rs  request.rs  response.rs  url.rs
flux-network/src/settings/: hello.html  mod.rs
flux-parser/: Cargo.toml
flux-parser/src/: error.rs  lib.rs
flux-parser/src/html/: mod.rs  parser.rs  token.rs
flux-ui/: Cargo.toml
flux-ui/src/: lib.rs
fluxa/: Cargo.toml  index.html  package.json
fluxa/src/: App.vue  main.rs
fluxa/src-tauri/: Cargo.toml  tauri.conf.json
fluxa/src-tauri/src/: lib.rs  main.rs
