[package]
name = "flux-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_6"] }
glib = "0.20.7"
flux-core = { path = "../flux-core" }
flux-dom = { path = "../flux-dom" }
flux-network = { path = "../flux-network" }
flux-parser = { path = "../flux-parser" }

